@@ -18,18 +18,17 @@
 package org.jackhuang.hmcl.ui.versions;
 
 import com.jfoenix.controls.*;
-import com.jfoenix.controls.datamodels.treetable.RecursiveTreeObject;
 import javafx.animation.PauseTransition;
 import javafx.beans.binding.Bindings;
 import javafx.beans.property.BooleanProperty;
+import javafx.beans.property.ObjectProperty;
+import javafx.beans.value.ChangeListener;
 import javafx.collections.ListChangeListener;
+import javafx.css.PseudoClass;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Node;
-import javafx.scene.control.Label;
-import javafx.scene.control.ScrollPane;
-import javafx.scene.control.SelectionMode;
-import javafx.scene.control.SkinBase;
+import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.KeyCode;
@@ -37,6 +36,7 @@ import javafx.scene.input.KeyEvent;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.StackPane;
+import javafx.stage.Stage;
 import javafx.util.Duration;
 import org.jackhuang.hmcl.mod.LocalModFile;
 import org.jackhuang.hmcl.mod.ModLoaderType;
@@ -55,32 +55,28 @@ import org.jackhuang.hmcl.ui.SVG;
 import org.jackhuang.hmcl.ui.animation.ContainerAnimations;
 import org.jackhuang.hmcl.ui.animation.TransitionPane;
 import org.jackhuang.hmcl.ui.construct.*;
-import org.jackhuang.hmcl.util.Holder;
-import org.jackhuang.hmcl.util.Lazy;
-import org.jackhuang.hmcl.util.Pair;
-import org.jackhuang.hmcl.util.StringUtils;
+import org.jackhuang.hmcl.util.*;
 import org.jackhuang.hmcl.util.i18n.I18n;
 import org.jackhuang.hmcl.util.io.CompressingUtils;
 import org.jackhuang.hmcl.util.io.FileUtils;
 import org.jackhuang.hmcl.util.io.NetworkUtils;
-import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.lang.ref.SoftReference;
+import java.lang.ref.WeakReference;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static org.jackhuang.hmcl.ui.FXUtils.ignoreEvent;
 import static org.jackhuang.hmcl.ui.FXUtils.onEscPressed;
 import static org.jackhuang.hmcl.ui.ToolbarListPageSkin.createToolbarButton2;
 import static org.jackhuang.hmcl.util.Lang.mapOf;
 import static org.jackhuang.hmcl.util.Pair.pair;
-import static org.jackhuang.hmcl.util.StringUtils.isNotBlank;
 import static org.jackhuang.hmcl.util.i18n.I18n.i18n;
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
@@ -97,6 +93,9 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
     // FXThread
     private boolean isSearching = false;
 
+    @SuppressWarnings({"FieldCanBeLocal", "unused"})
+    private final ChangeListener<Boolean> holder;
+
     ModListPageSkin(ModListPage skinnable) {
         super(skinnable);
 
@@ -107,6 +106,12 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
         ComponentList root = new ComponentList();
         root.getStyleClass().add("no-padding");
         listView = new JFXListView<>();
+
+        this.holder = FXUtils.onWeakChange(skinnable.loadingProperty(), loading -> {
+            if (!loading) {
+                listView.scrollTo(0);
+            }
+        });
 
         {
             toolbarPane = new TransitionPane();
@@ -145,7 +150,7 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
             toolbarNormal.getChildren().setAll(
                     createToolbarButton2(i18n("button.refresh"), SVG.REFRESH, skinnable::refresh),
                     createToolbarButton2(i18n("mods.add"), SVG.ADD, skinnable::add),
-                    createToolbarButton2(i18n("folder.mod"), SVG.FOLDER_OPEN, skinnable::openModFolder),
+                    createToolbarButton2(i18n("button.reveal_dir"), SVG.FOLDER_OPEN, skinnable::openModFolder),
                     createToolbarButton2(i18n("mods.check_updates"), SVG.UPDATE, skinnable::checkUpdates),
                     createToolbarButton2(i18n("download"), SVG.DOWNLOAD, skinnable::download),
                     createToolbarButton2(i18n("search"), SVG.SEARCH, () -> changeToolbar(searchBar))
@@ -275,19 +280,41 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                         || predicate.test(modInfo.getGameVersion())
                         || predicate.test(modInfo.getId())
                         || predicate.test(Objects.toString(modInfo.getModLoaderType()))
-                        || predicate.test((item.getMod() != null ? item.getMod().getDisplayName() : null))) {
+                        || predicate.test((item.getModTranslations() != null ? item.getModTranslations().getDisplayName() : null))) {
                     listView.getItems().add(item);
                 }
             }
         }
     }
 
-    private static Task<Image> loadModIcon(LocalModFile modFile, int size) {
-        return Task.supplyAsync(() -> {
+    static final class ModInfoObject {
+        private final BooleanProperty active;
+        private final LocalModFile localModFile;
+        private final @Nullable ModTranslations.Mod modTranslations;
+
+        private SoftReference<CompletableFuture<Image>> iconCache;
+
+        ModInfoObject(LocalModFile localModFile) {
+            this.localModFile = localModFile;
+            this.active = localModFile.activeProperty();
+
+            this.modTranslations = ModTranslations.MOD.getMod(localModFile.getId(), localModFile.getName());
+        }
+
+        LocalModFile getModInfo() {
+            return localModFile;
+        }
+
+        public @Nullable ModTranslations.Mod getModTranslations() {
+            return modTranslations;
+        }
+
+        @FXThread
+        private Image loadIcon() {
             List<String> iconPaths = new ArrayList<>();
 
-            if (StringUtils.isNotBlank(modFile.getLogoPath())) {
-                iconPaths.add(modFile.getLogoPath());
+            if (StringUtils.isNotBlank(this.localModFile.getLogoPath())) {
+                iconPaths.add(this.localModFile.getLogoPath());
             }
 
             iconPaths.addAll(List.of(
@@ -311,7 +338,7 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                     "resources/mod_icon.png"
             ));
 
-            String modId = modFile.getId();
+            String modId = this.localModFile.getId();
             if (StringUtils.isNotBlank(modId)) {
                 iconPaths.addAll(List.of(
                         "assets/" + modId + "/icon.png",
@@ -330,14 +357,12 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                 ));
             }
 
-            try (FileSystem fs = CompressingUtils.createReadOnlyZipFileSystem(modFile.getFile())) {
+            try (FileSystem fs = CompressingUtils.createReadOnlyZipFileSystem(this.localModFile.getFile())) {
                 for (String path : iconPaths) {
                     Path iconPath = fs.getPath(path);
                     if (Files.exists(iconPath)) {
-                        Image image = FXUtils.loadImage(iconPath, size, size, true, true);
-                        if (!image.isError() &&
-                                image.getWidth() > 0 &&
-                                image.getHeight() > 0 &&
+                        Image image = FXUtils.loadImage(iconPath, 80, 80, true, true);
+                        if (!image.isError() && image.getWidth() > 0 && image.getHeight() > 0 &&
                                 Math.abs(image.getWidth() - image.getHeight()) < 1) {
                             return image;
                         }
@@ -347,102 +372,68 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                 LOG.warning("Failed to load mod icons", e);
             }
 
-            VersionIconType defaultIcon = switch (modFile.getModLoaderType()) {
-                case FORGE -> VersionIconType.FORGE;
-                case NEO_FORGED -> VersionIconType.NEO_FORGE;
-                case FABRIC -> VersionIconType.FABRIC;
-                case QUILT -> VersionIconType.QUILT;
-                case LITE_LOADER -> VersionIconType.CHICKEN;
-                case CLEANROOM -> VersionIconType.CLEANROOM;
-                default -> VersionIconType.COMMAND;
-            };
+            return VersionIconType.getIconType(this.localModFile.getModLoaderType()).getIcon();
+        }
 
-            return defaultIcon.getIcon(size);
-        });
-    }
-
-    static class ModInfoObject extends RecursiveTreeObject<ModInfoObject> implements Comparable<ModInfoObject> {
-        private final BooleanProperty active;
-        private final LocalModFile localModFile;
-        private final String title;
-        private final String message;
-        private final ModTranslations.Mod mod;
-
-        private SoftReference<Image> iconCache;
-
-        ModInfoObject(LocalModFile localModFile) {
-            this.localModFile = localModFile;
-            this.active = localModFile.activeProperty();
-
-            this.title = localModFile.getName();
-
-            List<String> parts = new ArrayList<>();
-            if (isNotBlank(localModFile.getId())) {
-                parts.add(localModFile.getId());
+        public void loadIcon(ImageView imageView, @Nullable WeakReference<ObjectProperty<ModInfoObject>> current) {
+            SoftReference<CompletableFuture<Image>> iconCache = this.iconCache;
+            CompletableFuture<Image> imageFuture;
+            if (iconCache != null && (imageFuture = iconCache.get()) != null) {
+                Image image = imageFuture.getNow(null);
+                if (image != null) {
+                    imageView.setImage(image);
+                    return;
+                }
+            } else {
+                imageFuture = CompletableFuture.supplyAsync(this::loadIcon, Schedulers.io());
+                this.iconCache = new SoftReference<>(imageFuture);
             }
-            if (isNotBlank(localModFile.getVersion())) {
-                parts.add(localModFile.getVersion());
-            }
-            if (isNotBlank(localModFile.getGameVersion())) {
-                parts.add(i18n("game.version") + ": " + localModFile.getGameVersion());
-            }
-            this.message = String.join(", ", parts);
-            this.mod = ModTranslations.MOD.getModById(localModFile.getId());
-        }
+            imageView.setImage(VersionIconType.getIconType(localModFile.getModLoaderType()).getIcon());
+            imageFuture.thenAcceptAsync(image -> {
+                if (current != null) {
+                    ObjectProperty<ModInfoObject> infoObjectProperty = current.get();
+                    if (infoObjectProperty == null || infoObjectProperty.get() != this) {
+                        // The current ListCell has already switched to another object
+                        return;
+                    }
+                }
 
-        String getTitle() {
-            return title;
-        }
-
-        String getSubtitle() {
-            return message;
-        }
-
-        LocalModFile getModInfo() {
-            return localModFile;
-        }
-
-        public ModTranslations.Mod getMod() {
-            return mod;
-        }
-
-        @Override
-        public int compareTo(@NotNull ModListPageSkin.ModInfoObject o) {
-            return localModFile.getFileName().toLowerCase().compareTo(o.localModFile.getFileName().toLowerCase());
+                imageView.setImage(image);
+            }, Schedulers.javafx());
         }
     }
 
-    class ModInfoDialog extends JFXDialogLayout {
+    final class ModInfoDialog extends JFXDialogLayout {
 
         ModInfoDialog(ModInfoObject modInfo) {
             HBox titleContainer = new HBox();
             titleContainer.setSpacing(8);
 
+            Stage stage = Controllers.getStage();
+            maxWidthProperty().bind(stage.widthProperty().multiply(0.7));
+
             ImageView imageView = new ImageView();
             FXUtils.limitSize(imageView, 40, 40);
-            loadModIcon(modInfo.getModInfo(), 40)
-                    .whenComplete(Schedulers.javafx(), (image, exception) -> {
-                        imageView.setImage(image);
-                    }).start();
+            modInfo.loadIcon(imageView, null);
 
             TwoLineListItem title = new TwoLineListItem();
-            title.setTitle(modInfo.getModInfo().getName());
-            if (modInfo.getMod() != null) {
-                title.addTag(modInfo.getMod().getDisplayName());
-            }
+            if (modInfo.getModTranslations() != null && I18n.isUseChinese())
+                title.setTitle(modInfo.getModTranslations().getDisplayName());
+            else
+                title.setTitle(modInfo.getModInfo().getName());
 
-            List<String> subtitleParts = new ArrayList<>();
-            subtitleParts.add(FileUtils.getName(modInfo.getModInfo().getFile()));
+            StringJoiner subtitle = new StringJoiner(" | ");
+            subtitle.add(FileUtils.getName(modInfo.getModInfo().getFile()));
             if (StringUtils.isNotBlank(modInfo.getModInfo().getGameVersion())) {
-                subtitleParts.add(modInfo.getModInfo().getGameVersion());
+                subtitle.add(modInfo.getModInfo().getGameVersion());
             }
             if (StringUtils.isNotBlank(modInfo.getModInfo().getVersion())) {
-                subtitleParts.add(modInfo.getModInfo().getVersion());
+                subtitle.add(modInfo.getModInfo().getVersion());
             }
             if (StringUtils.isNotBlank(modInfo.getModInfo().getAuthors())) {
-                subtitleParts.add(i18n("archive.author") + ": " + modInfo.getModInfo().getAuthors());
+                subtitle.add(i18n("archive.author") + ": " + modInfo.getModInfo().getAuthors());
             }
-            title.setSubtitle(String.join(", ", subtitleParts));
+            title.setSubtitle(subtitle.toString());
 
             titleContainer.getChildren().setAll(FXUtils.limitingSize(imageView, 40, 40), title);
             setHeading(titleContainer);
@@ -456,6 +447,11 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
             descriptionPane.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
             descriptionPane.setVbarPolicy(ScrollPane.ScrollBarPolicy.AS_NEEDED);
             descriptionPane.setFitToWidth(true);
+            description.heightProperty().addListener((obs, oldVal, newVal) -> {
+                double maxHeight = stage.getHeight() * 0.5;
+                double targetHeight = Math.min(newVal.doubleValue(), maxHeight);
+                descriptionPane.setPrefViewportHeight(targetHeight);
+            });
 
             setBody(descriptionPane);
 
@@ -507,7 +503,7 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                                     Controllers.navigate(new DownloadPage(
                                             repository instanceof CurseForgeRemoteModRepository ? HMCLLocalizedDownloadListPage.ofCurseForgeMod(null, false) : HMCLLocalizedDownloadListPage.ofModrinthMod(null, false),
                                             remoteMod,
-                                            new Profile.ProfileVersion(ModListPageSkin.this.getSkinnable().getProfile(), ModListPageSkin.this.getSkinnable().getVersionId()),
+                                            new Profile.ProfileVersion(ModListPageSkin.this.getSkinnable().getProfile(), ModListPageSkin.this.getSkinnable().getInstanceId()),
                                             (profile, version, file) -> org.jackhuang.hmcl.ui.download.DownloadPage.download(profile, version, file, "mods")
                                     ));
                                 });
@@ -530,7 +526,7 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                 getActions().add(officialPageButton);
             }
 
-            if (modInfo.getMod() == null || StringUtils.isBlank(modInfo.getMod().getMcmod())) {
+            if (modInfo.getModTranslations() == null || StringUtils.isBlank(modInfo.getModTranslations().getMcmod())) {
                 JFXHyperlink searchButton = new JFXHyperlink(i18n("mods.mcmod.search"));
                 searchButton.setOnAction(e -> {
                     fireEvent(new DialogCloseEvent());
@@ -545,7 +541,7 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                 JFXHyperlink mcmodButton = new JFXHyperlink(i18n("mods.mcmod.page"));
                 mcmodButton.setOnAction(e -> {
                     fireEvent(new DialogCloseEvent());
-                    FXUtils.openLink(ModTranslations.MOD.getMcmodUrl(modInfo.getMod()));
+                    FXUtils.openLink(ModTranslations.MOD.getMcmodUrl(modInfo.getModTranslations()));
                 });
                 getActions().add(mcmodButton);
             }
@@ -564,6 +560,8 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
     private static final Lazy<JFXPopup> popup = new Lazy<>(() -> new JFXPopup(menu.get()));
 
     final class ModInfoListCell extends MDListCell<ModInfoObject> {
+        private static final PseudoClass WARNING = PseudoClass.getPseudoClass("warning");
+
         JFXCheckBox checkBox = new JFXCheckBox();
         ImageView imageView = new ImageView();
         TwoLineListItem content = new TwoLineListItem();
@@ -572,8 +570,12 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
         JFXButton revealButton = new JFXButton();
         BooleanProperty booleanProperty;
 
+        Tooltip warningTooltip;
+
         ModInfoListCell(JFXListView<ModInfoObject> listView, Holder<Object> lastCell) {
             super(listView, lastCell);
+
+            this.getStyleClass().add("mod-info-list-cell");
 
             HBox container = new HBox(8);
             container.setPickOnBounds(false);
@@ -585,7 +587,7 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
             imageView.setFitWidth(24);
             imageView.setFitHeight(24);
             imageView.setPreserveRatio(true);
-            imageView.setImage(FXUtils.newBuiltinImage("/assets/img/command.png", 24, 24, true, true));
+            imageView.setImage(VersionIconType.COMMAND.getIcon());
 
             restoreButton.getStyleClass().add("toggle-icon4");
             restoreButton.setGraphic(FXUtils.limitingSize(SVG.RESTORE.createIcon(Theme.blackFill(), 24), 24, 24));
@@ -606,68 +608,113 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
 
         @Override
         protected void updateControl(ModInfoObject dataItem, boolean empty) {
+            pseudoClassStateChanged(WARNING, false);
+            if (warningTooltip != null) {
+                Tooltip.uninstall(this, warningTooltip);
+                warningTooltip = null;
+            }
+
             if (empty) return;
 
-            SoftReference<Image> iconCache = dataItem.iconCache;
-            Image icon;
-            if (iconCache != null && (icon = iconCache.get()) != null) {
-                imageView.setImage(icon);
-            } else {
-                loadModIcon(dataItem.getModInfo(), 24)
-                        .whenComplete(Schedulers.javafx(), (image, exception) -> {
-                            dataItem.iconCache = new SoftReference<>(image);
-                            imageView.setImage(image);
-                        }).start();
+            List<String> warning = new ArrayList<>();
+
+            content.getTags().clear();
+
+            LocalModFile modInfo = dataItem.getModInfo();
+            ModTranslations.Mod modTranslations = dataItem.getModTranslations();
+
+            ModLoaderType modLoaderType = modInfo.getModLoaderType();
+
+            dataItem.loadIcon(imageView, new WeakReference<>(this.itemProperty()));
+
+            String displayName = modInfo.getName();
+            if (modTranslations != null && I18n.isUseChinese()) {
+                String chineseName = modTranslations.getName();
+                if (StringUtils.containsChinese(chineseName)) {
+                    if (StringUtils.containsEmoji(chineseName)) {
+                        StringBuilder builder = new StringBuilder();
+
+                        chineseName.codePoints().forEach(ch -> {
+                            if (ch < 0x1F300 || ch > 0x1FAFF)
+                                builder.appendCodePoint(ch);
+                        });
+
+                        chineseName = builder.toString().trim();
+                    }
+
+                    if (StringUtils.isNotBlank(chineseName) && !displayName.equalsIgnoreCase(chineseName)) {
+                        displayName = displayName + " (" + chineseName + ")";
+                    }
+                }
+            }
+            content.setTitle(displayName);
+
+            StringJoiner joiner = new StringJoiner(" | ");
+            if (modLoaderType != ModLoaderType.UNKNOWN && StringUtils.isNotBlank(modInfo.getId()))
+                joiner.add(modInfo.getId());
+
+            joiner.add(FileUtils.getName(modInfo.getFile()));
+
+            content.setSubtitle(joiner.toString());
+
+            if (modLoaderType == ModLoaderType.UNKNOWN) {
+                content.addTagWarning(i18n("mods.unknown"));
+            } else if (!ModListPageSkin.this.getSkinnable().supportedLoaders.contains(modLoaderType)) {
+                warning.add(i18n("mods.warning.loader_mismatch"));
+                switch (dataItem.getModInfo().getModLoaderType()) {
+                    case FORGE:
+                        content.addTagWarning(i18n("install.installer.forge"));
+                        break;
+                    case CLEANROOM:
+                        content.addTagWarning(i18n("install.installer.cleanroom"));
+                        break;
+                    case NEO_FORGED:
+                        content.addTagWarning(i18n("install.installer.neoforge"));
+                        break;
+                    case FABRIC:
+                        content.addTagWarning(i18n("install.installer.fabric"));
+                        break;
+                    case LITE_LOADER:
+                        content.addTagWarning(i18n("install.installer.liteloader"));
+                        break;
+                    case QUILT:
+                        content.addTagWarning(i18n("install.installer.quilt"));
+                        break;
+                }
             }
 
-            content.setTitle(dataItem.getTitle());
-            content.getTags().clear();
-            switch (dataItem.getModInfo().getModLoaderType()) {
-                case FORGE:
-                    content.addTag(i18n("install.installer.forge"));
-                    break;
-                case CLEANROOM:
-                    content.addTag(i18n("install.installer.cleanroom"));
-                    break;
-                case NEO_FORGED:
-                    content.addTag(i18n("install.installer.neoforge"));
-                    break;
-                case FABRIC:
-                    content.addTag(i18n("install.installer.fabric"));
-                    break;
-                case LITE_LOADER:
-                    content.addTag(i18n("install.installer.liteloader"));
-                    break;
-                case QUILT:
-                    content.addTag(i18n("install.installer.quilt"));
-                    break;
+            String modVersion = modInfo.getVersion();
+            if (StringUtils.isNotBlank(modVersion) && !"${version}".equals(modVersion)) {
+                content.addTag(modVersion);
             }
-            if (dataItem.getMod() != null && I18n.isUseChinese()) {
-                if (isNotBlank(dataItem.getSubtitle())) {
-                    content.setSubtitle(dataItem.getSubtitle() + ", " + dataItem.getMod().getDisplayName());
-                } else {
-                    content.setSubtitle(dataItem.getMod().getDisplayName());
-                }
-            } else {
-                content.setSubtitle(dataItem.getSubtitle());
-            }
+
             if (booleanProperty != null) {
                 checkBox.selectedProperty().unbindBidirectional(booleanProperty);
             }
             checkBox.selectedProperty().bindBidirectional(booleanProperty = dataItem.active);
-            restoreButton.setVisible(!dataItem.getModInfo().getMod().getOldFiles().isEmpty());
+            restoreButton.setVisible(!modInfo.getMod().getOldFiles().isEmpty());
             restoreButton.setOnAction(e -> {
-                menu.get().getContent().setAll(dataItem.getModInfo().getMod().getOldFiles().stream()
+                menu.get().getContent().setAll(modInfo.getMod().getOldFiles().stream()
                         .map(localModFile -> new IconedMenuItem(null, localModFile.getVersion(),
-                                () -> getSkinnable().rollback(dataItem.getModInfo(), localModFile),
+                                () -> getSkinnable().rollback(modInfo, localModFile),
                                 popup.get()))
-                        .collect(Collectors.toList())
+                        .toList()
                 );
 
                 popup.get().show(restoreButton, JFXPopup.PopupVPosition.TOP, JFXPopup.PopupHPosition.RIGHT, 0, restoreButton.getHeight());
             });
-            revealButton.setOnAction(e -> FXUtils.showFileInExplorer(dataItem.getModInfo().getFile()));
+            revealButton.setOnAction(e -> FXUtils.showFileInExplorer(modInfo.getFile()));
             infoButton.setOnAction(e -> Controllers.dialog(new ModInfoDialog(dataItem)));
+
+            if (!warning.isEmpty()) {
+                pseudoClassStateChanged(WARNING, true);
+
+                //noinspection ConstantValue
+                this.warningTooltip = warning.size() == 1
+                        ? new Tooltip(warning.get(0))
+                        : new Tooltip(String.join("\n", warning));
+                FXUtils.installFastTooltip(this, warningTooltip);
+            }
         }
     }
 }
